--- a/src/app/landing-page/login/reset-password/new-password/new-password.component.html
+++ b/src/app/landing-page/login/reset-password/new-password/new-password.component.html
@@ -1,21 +1,89 @@
 <div class="reset-password">
   <mat-card>
     <div class="headline">
-      <mat-icon class="back-icon" [routerLink]="['/']">arrow_back</mat-icon>
+      <mat-icon class="back-icon" (click)="navigateToLogin()"
+        >arrow_back</mat-icon
+      >
 
       <h1>Passwort zurücksetzen</h1>
     </div>
 
     <div class="input-primary">
-      <input placeholder="Neues Passwort" />
+      <input
+        [formControl]="newPasswordControl"
+        placeholder="Neues Passwort"
+        type="password"
+        [ngClass]="{
+          'input-error':
+            newPasswordControl.invalid && newPasswordControl.touched
+        }"
+      />
+      <div *ngIf="newPasswordControl.touched" class="error-message">
+        <ng-container
+          *ngIf="newPasswordControl.hasError('required'); else minlengthCheck"
+        >
+          Passwort ist erforderlich
+        </ng-container>
+        <ng-template #minlengthCheck>
+          <ng-container
+            *ngIf="
+              newPasswordControl.hasError('minlength');
+              else uppercaseCheck
+            "
+          >
+            Mindestens 8 Zeichen
+          </ng-container>
+        </ng-template>
+        <ng-template #uppercaseCheck>
+          <ng-container *ngIf="!passwordHasUppercase; else lowercaseCheck">
+            Mindestens 1 Großbuchstabe
+          </ng-container>
+        </ng-template>
+        <ng-template #lowercaseCheck>
+          <ng-container *ngIf="!passwordHasLowercase; else numberCheck">
+            Mindestens 1 Kleinbuchstabe
+          </ng-container>
+        </ng-template>
+        <ng-template #numberCheck>
+          <ng-container *ngIf="!passwordHasNumber; else specialCharCheck">
+            Mindestens 1 Zahl
+          </ng-container>
+        </ng-template>
+        <ng-template #specialCharCheck>
+          <ng-container *ngIf="!passwordHasSpecialChar">
+            Mindestens 1 Sonderzeichen
+          </ng-container>
+        </ng-template>
+      </div>
     </div>
 
     <div class="input-primary">
-      <input placeholder="Neues Passwort Wiederholen" />
+      <input
+        [formControl]="confirmPasswordControl"
+        placeholder="Neues Passwort Wiederholen"
+        type="password"
+        [ngClass]="{
+          'input-error':
+            confirmPasswordControl.invalid && confirmPasswordControl.touched
+        }"
+      />
+      <div *ngIf="confirmPasswordControl.touched" class="error-message">
+        <span *ngIf="newPasswordControl.value !== confirmPasswordControl.value">
+          Passwörter stimmen nicht überein
+        </span>
+      </div>
     </div>
 
     <div class="next-button">
-      <button mat-flat-button class="button-primary" disabled>
+      <button
+        mat-flat-button
+        class="button-primary"
+        (click)="changePassword()"
+        [disabled]="
+          !newPasswordForm.valid ||
+          newPasswordControl.value !== confirmPasswordControl.value
+        "
+      >
         Passwort ändern
       </button>
     </div>
@@ -36,7 +104,7 @@
   </div>
 
   <div class="info-links">
-    <a class="link" [routerLink]="['/impressum']">Impressum</a>
-    <a class="link" [routerLink]="['/datenschutz']">Datenschutz</a>
+    <a class="link" (click)="navigateToImprint()">Impressum</a>
+    <a class="link" (click)="navigateToPrivacyPolicy()">Datenschutz</a>
   </div>
 </div>
