--- a/src/app/landing-page/login/reset-password/new-password/new-password.component.scss
+++ b/src/app/landing-page/login/reset-password/new-password/new-password.component.scss
@@ -49,6 +49,26 @@
       color: var(--black-color);
     }
 
+    .input-primary {
+      position: relative;
+      background-color: var(--bg-color);
+
+      .input-error {
+        box-shadow: 0 0 0 1px var(--error-color) !important;
+      }
+
+      .error-message {
+        position: absolute;
+        bottom: -24px;
+
+        display: flex;
+        flex-direction: column;
+
+        color: var(--error-color);
+        font-size: 14px;
+      }
+    }
+
     .next-button {
       width: 100%;
       display: flex;
