--- a/src/app/landing-page/login/reset-password/reset-password.component.html
+++ b/src/app/landing-page/login/reset-password/reset-password.component.html
@@ -1,7 +1,7 @@
 <div class="reset-password">
   <mat-card>
     <div class="headline">
-      <mat-icon class="back-icon" [routerLink]="['/']">arrow_back</mat-icon>
+      <mat-icon class="back-icon" (click)="goBack()">arrow_back</mat-icon>
 
       <h1>Passwort zurücksetzen</h1>
     </div>
@@ -9,16 +9,28 @@
     <p>Bitte geben Sie Ihre E-Mail-Adresse ein.</p>
 
     <div class="input-primary">
-      <input placeholder="beispielname&#64;email.com" />
+      <input [formControl]="email" placeholder="beispielname&#64;email.com" />
       <mat-icon>mail_outline</mat-icon>
     </div>
+
+    <p *ngIf="email.invalid && email.touched" class="error-message">
+      Bitte geben Sie eine gültige E-Mail-Adresse ein.
+    </p>
+
+    <p *ngIf="successMessage" class="success-message">{{ successMessage }}</p>
+    <p *ngIf="errorMessage" class="error-message">{{ errorMessage }}</p>
 
     <p>
       Wir senden Ihnen eine E-Mail, über die Sie Ihr Passwort ändern können.
     </p>
 
     <div class="next-button">
-      <button mat-flat-button class="button-primary" disabled>
+      <button
+        mat-flat-button
+        class="button-primary"
+        (click)="sendPasswordResetEmail()"
+        [disabled]="email.invalid"
+      >
         E-Mail senden
       </button>
     </div>
@@ -39,7 +51,7 @@
   </div>
 
   <div class="info-links">
-    <a class="link" [routerLink]="['/impressum']">Impressum</a>
-    <a class="link" [routerLink]="['/datenschutz']">Datenschutz</a>
+    <a class="link" (click)="navigateToImprint()">Impressum</a>
+    <a class="link" (click)="navigateToPrivacyPolicy()">Datenschutz</a>
   </div>
 </div>
