--- a/src/app/landing-page/register/select-avatar/select-avatar.component.scss
+++ b/src/app/landing-page/register/select-avatar/select-avatar.component.scss
@@ -84,6 +84,26 @@
         }
       }
 
+      img {
+        position: relative;
+        cursor: pointer;
+        width: 168px;
+        height: 168px;
+        border-radius: 100px;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        &:hover {
+          outline: 8px solid #e6e6e6;
+        }
+
+        &:active {
+          outline: 8px solid var(--bg-color);
+        }
+      }
+
       h2 {
         color: var(--black-color);
       }
