Edited the new message components.

--- a/src/app/main/main-message-area/chat-components/other-message-template/other-message-template.component.html
+++ b/src/app/main/main-message-area/chat-components/other-message-template/other-message-template.component.html
@@ -63,7 +63,7 @@
       'message-container-hover': isEmojiContainerVisible === 1
     }"
   >
-    <img src="../../../../assets/img/frederik-beck.png" alt="Profile Picture" />
+    <img src="../../../../../assets/img/profile/elias.webp" alt="Profile Picture" />
     <div class="text-container">
       <div class="name-and-time">
         <span class="name">Noah Braun</span>
