--- a/src/app/main/main-message-area/message-area-header/message-area-header.component.html
+++ b/src/app/main/main-message-area/message-area-header/message-area-header.component.html
@@ -41,9 +41,9 @@
       #memberListMenuTrigger="matMenuTrigger"
       class="button-channel-member-list"
     >
-      <img src="../../../../assets/img/frederik-beck.png" alt="Profile Picture" />
-      <img src="../../../../assets/img/frederik-beck.png" alt="" />
-      <img src="../../../../assets/img/frederik-beck.png" alt="" />
+      <img src="../../../../assets/img/profile/elias.webp" alt="Profile Picture" />
+      <img src="../../../../assets/img/profile/elise.webp" alt="" />
+      <img src="../../../../assets/img/profile/sofia.webp" alt="" />
       <span>3</span>
     </button>
     <mat-menu
