--- a/src/app/main/main-message-area/chat-components/own-message-template/own-message-template.component.html
+++ b/src/app/main/main-message-area/chat-components/own-message-template/own-message-template.component.html
@@ -62,7 +62,7 @@
       'message-container-hover': isEmojiContainerVisible === 2
     }"
   >
-    <img src="../../../../assets/img/frederik-beck.png" alt="Profile Picture" />
+    <img src="../../../../../assets/img/profile/noah.webp" alt="Profile Picture" />
     <div class="text-container">
       <div class="name-and-time-own">
         <span class="name">Noah Braun</span>
