--- a/src/app/shared/profile-info-dialog/profile-info-dialog.component.html
+++ b/src/app/shared/profile-info-dialog/profile-info-dialog.component.html
@@ -1,15 +1,12 @@
 <mat-card class="profile-info-dialog" appearance="outlined">
   <div class="card-header">
     <h3>Profil</h3>
-    <mat-icon>close</mat-icon>
+    <mat-icon (click)="closeDialog()">close</mat-icon>
   </div>
   <img class="profile-image" src="./assets/img/profile/frederik.webp" alt="" />
   <div class="profile-info-name">
     <div class="name-edit">
-      <h2>
-        {{ userDataService.userData.name }}
-        {{ userDataService.userData.lastName }}
-      </h2>
+      <h2>Frederick Beck</h2>
       <span>Bearbeiten</span>
     </div>
     <div class="activity-indicator">
