New directive and dialog bindings
New directive for stop propagation added and bindings for create channel dialog implemented to side-nav component

--- a/src/app/main/side-nav/side-nav.component.html
+++ b/src/app/main/side-nav/side-nav.component.html
@@ -25,7 +25,8 @@
           <button
             mat-icon-button
             class="toolbar-icon"
-            (click)="$event.stopPropagation()"
+            clickStopPropagation
+            (click)="openCreateChannelDialog()"
           >
             <mat-icon class="material-symbols-outlined">add</mat-icon>
           </button>
