--- a/src/app/main/side-nav/side-nav.component.html
+++ b/src/app/main/side-nav/side-nav.component.html
@@ -38,7 +38,10 @@
       <button class="button-secondary">
         <mat-icon class="material-symbols-outlined">tag</mat-icon>Office-team
       </button>
-      <button class="button-secondary footer-button">
+      <button
+        class="button-secondary footer-button"
+        (click)="openCreateChannelDialog()"
+      >
         <mat-icon class="material-symbols-outlined">add_circle</mat-icon>Chanel
         hinzufügen
       </button>
