--- a/src/app/main/header/profile-dialog/profile-dialog.component.html
+++ b/src/app/main/header/profile-dialog/profile-dialog.component.html
@@ -5,5 +5,7 @@
   >
     Profil
   </button>
-  <button class="button-secondary profile-dialog-button">Log out</button>
+  <button class="button-secondary profile-dialog-button" (click)="logOut()">
+    Log out
+  </button>
 </mat-card>
