--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header [userData]="userData"></app-header>
 
 <div class="sidenav-button-container">
   <button (click)="drawer.toggle()">
