Implemented the channel service and channel class. Also Added some functions to get the actual channel data and fill the message area header.

--- a/src/app/main/main-message-area/message-area-header/channel-description/channel-description.component.html
+++ b/src/app/main/main-message-area/message-area-header/channel-description/channel-description.component.html
@@ -13,7 +13,7 @@
           fill="currentColor"
         />
       </svg>
-      Entwicklerteam
+      {{currentChannel?.channelName}}
     </h2>
     <mat-icon (click)="header.closeMenu('choose-channel')">close</mat-icon>
   </div>
