--- a/src/app/main/main-message-area/message-area-header/channel-description/channel-edit-description/channel-edit-description.component.html
+++ b/src/app/main/main-message-area/message-area-header/channel-description/channel-edit-description/channel-edit-description.component.html
@@ -8,6 +8,6 @@
    </div>
     <div class="created-by-container">
       <span>Erstellt von</span>
-      <span>Noah Braun</span>
+      <span>{{currentChannel?.admin?.userName}}</span>
     </div>
   </div>
