--- a/src/app/main/main-message-area/message-area-header/channel-new-member/channel-new-member.component.html
+++ b/src/app/main/main-message-area/message-area-header/channel-new-member/channel-new-member.component.html
@@ -18,7 +18,7 @@
         />
       </svg>
     </div>
-    <span>Entwicklerteam</span>
+    <span>{{currentChannel?.channelName}}</span>
   </div>
   <div class="input-container">
     <div class="input-primary">
