--- a/src/app/main/main-message-area/message-area-header/channel-description/channel-display-description/channel-display-description.component.html
+++ b/src/app/main/main-message-area/message-area-header/channel-description/channel-display-description/channel-display-description.component.html
@@ -3,14 +3,10 @@
       <span>Beschreibung</span>
       <button (click)="description.toggleEditDescription()">Bearbeiten</button>
     </div>
-    <span
-      >Dieser Channel ist für alles rund um #dfsdf vorgesehen. Hier kannst du
-      zusammen mit deinem Team Meetings abhalten, Dokumente teilen und
-      Entscheidungen treffen.</span
-    >
+    <span>{{currentChannel?.description}}</span>
     <div class="blue-line"></div>
     <div class="created-by-container">
       <span>Erstellt von</span>
-      <span>Noah Braun</span>
+      <span>{{currentChannel?.admin?.userName}}</span>
     </div>
   </div>
