--- a/src/app/main/main-message-area/message-area-header/channel-description/channel-display-name/channel-display-name.component.html
+++ b/src/app/main/main-message-area/message-area-header/channel-description/channel-display-name/channel-display-name.component.html
@@ -19,6 +19,6 @@
         fill="currentColor"
       />
     </svg>
-    Entwicklerteam
+    {{ currentChannel?.channelName }}
   </span>
 </section>  
