--- a/src/app/main/main-message-area/message-area-header/channel-members-list/channel-members-list.component.html
+++ b/src/app/main/main-message-area/message-area-header/channel-members-list/channel-members-list.component.html
@@ -11,19 +11,12 @@
       />
       <span>Frederick Beck (Du)</span>
     </div>
-    <div class="member">
+    <div class="member" *ngFor="let user of currentChannel?.members">
       <img
         src="../../../../assets/img/profile/elias.webp"
         alt="Profile Picture"
       />
-      <span>Elias Neumann</span>
-    </div>
-    <div class="member">
-      <img
-        src="../../../../assets/img/profile/elise.webp"
-        alt="Profile Picture"
-      />
-      <span>Elias Neumann</span>
+      <span>{{user.userName}}</span>
     </div>
     <div class="new-member" (click)="header.closeMenu('member-list')" (click)="header.openMenu('add-member')">
       <div class="add-icon">
