--- a/src/app/main/header/header.component.html
+++ b/src/app/main/header/header.component.html
@@ -8,9 +8,9 @@
     <mat-icon>search</mat-icon>
   </div>
   <div class="profile" (click)="toggleDropdown()">
-    <p>{{ userData.displayName }}</p>
+    <p *ngIf="userData">{{ userData.displayName }}</p>
     <div class="image-with-badge">
-      <img src="./{{ userData.photoURL }}" alt="" />
+      <img *ngIf="userData" src="./{{ userData.photoURL }}" alt="" />
       <div class="badge"></div>
     </div>
     <mat-icon>keyboard_arrow_down</mat-icon>
