--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,4 @@
-<app-header [userData]="userData"></app-header>
+<app-header *ngIf="userData" [userData]="userData"></app-header>
 
 <div class="sidenav-button-container">
   <button (click)="drawer.toggle()">
@@ -15,7 +15,7 @@
     autosize
   >
     <mat-drawer #drawer class="example-sidenav" mode="side" [opened]="true">
-      <app-side-nav [userData]="userData"></app-side-nav>
+      <app-side-nav *ngIf="userData" [userData]="userData"></app-side-nav>
     </mat-drawer>
   </mat-drawer-container>
   <app-main-message-area></app-main-message-area>
