First binding to private messages implemented

--- a/src/app/main/side-nav/side-nav.component.html
+++ b/src/app/main/side-nav/side-nav.component.html
@@ -68,10 +68,10 @@
       </mat-expansion-panel-header>
       <button class="button-secondary">
         <div class="image-with-badge">
-          <img src="./assets/img/profile/frederik.webp" alt="" />
+          <img src="{{ userData.photoURL }}" alt="" />
           <div class="badge"></div>
         </div>
-        <p class="name">Frederick Beck (Du)</p>
+        <p class="name">{{ userData.displayName }} (Du)</p>
       </button>
       <button class="button-secondary">
         <div class="image-with-badge">
