Hover effect adjustments on side nav

--- a/src/app/main/side-nav/side-nav.component.scss
+++ b/src/app/main/side-nav/side-nav.component.scss
@@ -101,6 +101,9 @@
         background-color: var(--bg-color) !important;
         font-weight: 700 !important;
         cursor: pointer;
+        p {
+          cursor: pointer;
+        }
       }
 
       &:hover .material-symbols-outlined {
