--- a/src/app/main/header/header.component.scss
+++ b/src/app/main/header/header.component.scss
@@ -4,12 +4,12 @@ header {
   align-items: center;
   background-color: var(--bg-color);
   margin-bottom: 20px;
+  gap: var(--gap-20);
 
   .logo {
     display: flex;
     align-items: center;
     gap: var(--gap-16);
-    width: 366px;
 
     img:first-child {
       height: 70px;
@@ -25,6 +25,7 @@ header {
     position: relative;
     display: flex;
     align-items: center;
+    max-width: 960px;
 
     gap: 16px;
     flex: 1;
@@ -56,7 +57,6 @@ header {
     align-items: center;
     justify-content: flex-end;
     gap: var(--gap-20);
-    width: 510px;
 
     p {
       font-size: var(--fontsize-32);
