Inputs bounded to some variables

--- a/src/app/main/side-nav/create-channel-dialog/create-channel-dialog.component.html
+++ b/src/app/main/side-nav/create-channel-dialog/create-channel-dialog.component.html
@@ -20,7 +20,13 @@
   </form>
   <h4>Beschreibung <span>(optional)</span></h4>
   <form class="form-field description">
-    <input placeholder="Dein Text hier" />
+    <input
+      [(ngModel)]="description"
+      name="description"
+      placeholder="Dein Text hier"
+    />
   </form>
-  <button class="button-primary" [disabled]="invalid">Erstellen</button>
+  <button class="button-primary" (click)="test()" [disabled]="invalid">
+    Erstellen
+  </button>
 </div>
