--- a/src/app/main/main-message-area/main-message-area.component.scss
+++ b/src/app/main/main-message-area/main-message-area.component.scss
@@ -18,6 +18,8 @@ app-message-area-header {
 app-message-area-chat-history {
   display: flex;
   flex-grow: 1;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 app-message-area-new-message {
