--- a/src/app/main/main-message-area/chat-components/other-message-template/other-message-template.component.html
+++ b/src/app/main/main-message-area/chat-components/other-message-template/other-message-template.component.html
@@ -63,19 +63,22 @@
       'message-container-hover': isEmojiContainerVisible === 1
     }"
   >
-    <img src="../../../../../assets/img/profile/elias.webp" alt="Profile Picture" />
+    <img src="{{ message?.user?.photoURL }}" alt="Profile Picture" />
     <div class="text-container">
       <div class="name-and-time">
-        <span class="name">Noah Braun</span>
-        <span class="time">14:25 Uhr</span>
+        <span class="name">{{ message?.user?.userName }}</span>
+        <span class="time">{{ message?.time | date: 'HH:mm' }} Uhr</span>
       </div>
-      <span class="message">Welche Version ist aktuell von Angular?</span>
+      <span class="message">{{ message?.content }}</span>
       <div class="emoji-container d-none"></div>
-      <div class="thread">
-        <span (click)="mainMessageArea.toggleSidenav()">2 Antworten</span>
-        <span>Letzte Antwort 14:56 Uhr</span>
+      <div class="thread" *ngIf="message?.thread?.messages.length > 0">
+        <span (click)="mainMessageArea.toggleSidenav()" >
+          {{ message?.thread?.messages.length }} {{ message?.thread?.messages.length === 1 ? 'Antwort' : 'Antworten' }}
+        </span>
+        <span>
+          Letzte Antwort: {{ getLastReplyTime(message.thread.messages) }}
+        </span>
       </div>
     </div>
   </div>
-  
 </section>
