--- a/src/app/main/main-message-area/chat-components/own-message-template/own-message-template.component.scss
+++ b/src/app/main/main-message-area/chat-components/own-message-template/own-message-template.component.scss
@@ -8,54 +8,11 @@ section {
     font-family: var(--font-nunito);
   }
   
-  .chat-history-daily-container-other-people {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-  }
-  
-  .chat-history-daily-container-own {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end; /** add this */
-    justify-content: flex-start;
-  }
-  
-  
-  .date-container {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    padding: 10px 20px 0px 20px;
-  }
-  
   .first-line,
   .last-line {
     flex-grow: 1;
     height: 1px;
     background-color: var(--light-purple-color);
-  }
-  
-  .date {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: 400;
-    border: 1px solid var(--light-purple-color);
-    border-radius: 30px;
-    padding: 5px 10px;
-  }
-  
-  .add-emoji-container {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    width: 100%;
-    padding: 0 30px;
   }
   
   .add-emoji-container-own {
@@ -103,15 +60,6 @@ section {
     cursor: pointer;
   }
   
-  .message-container {
-    width: 100%;
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    padding: 10px 30px;
-    gap: 20px;
-  }
-  
   .message-container-own {
     width: 100%;
     display: flex;
@@ -145,13 +93,7 @@ section {
     display: flex;
     flex-direction: column;
     gap: 10px;
-  }
-  
-  .name-and-time {
-    height: 25px;
-    display: flex;
-    gap: 30px;
-    position: relative;
+    align-items: flex-end;
   }
   
   .name-and-time-own {
@@ -170,13 +112,11 @@ section {
       color: var(--purple3-color);
     }
   }
-  
-  .message {
-    border-radius: 0px 30px 30px 30px;
-    background-color: var(--bg-color);
-    padding: 10px 20px;
-    position: relative;
-    display: flex;
+
+  .time {
+    color: var(--grey-color);
+    font-size: 14px;
+    align-self: center;
   }
   
   .message-own {
@@ -186,6 +126,7 @@ section {
     position: relative;
     display: flex;
     color: var(--text-color); /* add this */
+    width: fit-content;
   }
   
   .thread {
