--- a/src/app/main/main-message-area/message-area-header/message-area-header.component.scss
+++ b/src/app/main/main-message-area/message-area-header/message-area-header.component.scss
@@ -28,7 +28,7 @@ mat-toolbar {
   font-weight: 700;
   font-size: 24px;
   gap: 10px;
-  padding: 5px 20px;
+  padding: 5px 20px !important;
 
   &:hover,
   &.menu-opened {
@@ -68,6 +68,7 @@ mat-toolbar {
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  gap: 10px;
 }
 
 .button-channel-member-list {
@@ -75,7 +76,7 @@ mat-toolbar {
   background-color: unset;
   display: flex;
   align-items: center;
-  padding: 5px 10px;
+  padding: 5px 10px !important;
 
   img:last-of-type {
     margin-right: 0px;
@@ -114,6 +115,7 @@ mat-toolbar {
   background-color: var(--bg-color);
   width: 32px;
   height: 32px;
+  padding: 0 !important;
 
   svg {
     color: var(--black-color);
