Input field with user search added to dialog

--- a/src/app/main/side-nav/create-channel-dialog/create-channel-dialog.component.html
+++ b/src/app/main/side-nav/create-channel-dialog/create-channel-dialog.component.html
@@ -26,7 +26,11 @@
       placeholder="Dein Text hier"
     />
   </form>
-  <button class="button-primary" (click)="test()" [disabled]="invalid">
-    Erstellen
+  <button
+    class="button-primary"
+    (click)="openAddUsersToChannelDialog()"
+    [disabled]="invalid"
+  >
+    Weiter
   </button>
 </div>
