--- a/src/app/main/side-nav/add-users-to-new-channel-dialog/add-users-to-new-channel-dialog.component.scss
+++ b/src/app/main/side-nav/add-users-to-new-channel-dialog/add-users-to-new-channel-dialog.component.scss
@@ -1,4 +1,13 @@
 ::ng-deep {
+  .mdc-line-ripple {
+    &::before {
+      border-bottom-width: 0px !important;
+    }
+    &::after {
+      border-bottom-width: 0px !important;
+    }
+  }
+
   .mat-mdc-dialog-container .mdc-dialog__surface {
     border-radius: 30px;
   }
@@ -32,6 +41,44 @@
 
   .mat-mdc-form-field-subscript-wrapper {
     display: none !important;
+  }
+
+  .mdc-text-field--filled:not(.mdc-text-field--disabled) {
+    background-color: var(--white-color) !important;
+  }
+
+  .mat-mdc-text-field-wrapper:hover .mat-mdc-form-field-focus-overlay {
+    opacity: 0 !important;
+  }
+
+  .mat-mdc-form-field-focus-overlay {
+    background-color: unset !important;
+  }
+
+  .mdc-evolution-chip-set .mdc-evolution-chip-set__chips {
+    margin-left: 0 !important;
+  }
+
+  .mat-mdc-standard-chip:not(.mdc-evolution-chip--disabled) {
+    background-color: var(--bg-color) !important;
+  }
+
+  mat-icon,
+  mat-icon.mat-primary,
+  mat-icon.mat-accent,
+  mat-icon.mat-warn {
+    color: var(--grey-color);
+  }
+
+  .mat-mdc-chip.mdc-evolution-chip--with-trailing-action
+    .mat-mdc-chip-action-label {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+  }
+
+  .mat-mdc-dialog-container-with-actions .mat-mdc-dialog-content {
+    padding: 10px 0 4px 0 !important;
   }
 }
 
@@ -68,13 +115,25 @@
 
   mat-form-field {
     font-family: var(--font-nunito);
-    border-radius: 42px;
-    border: 1px solid var(--light-purple-color);
-    &:hover {
-      outline: 1px solid var(--purple2-color);
-    }
-    &:focus-visible {
-      outline: 1px solid var(--purple1-color);
+
+    mat-chip-grid {
+      padding: 10px;
+      border-radius: 42px;
+      border: 1px solid var(--light-purple-color);
+      &:hover {
+        outline: 1px solid var(--purple2-color);
+      }
+      &:focus-visible {
+        outline: 2px solid var(--purple1-color);
+      }
+
+      mat-chip-row {
+        img {
+          height: 30px;
+          width: 30px;
+          border-radius: 50%;
+        }
+      }
     }
   }
 }
