--- a/src/app/main/side-nav/create-channel-dialog/create-channel-dialog.component.html
+++ b/src/app/main/side-nav/create-channel-dialog/create-channel-dialog.component.html
@@ -1,4 +1,8 @@
-<div class="dialog-wrapper">
+<div
+  class="dialog-wrapper"
+  [attr.inert]="isSecondDialogOpen ? true : null"
+  [ngStyle]="{ display: isSecondDialogOpen ? 'none' : 'flex' }"
+>
   <div class="header-wrapper">
     <h3>Channel erstellen</h3>
     <mat-icon (click)="dialogRef.close()">close</mat-icon>
