--- a/src/app/main/side-nav/add-users-to-new-channel-dialog/add-users-to-new-channel-dialog.component.html
+++ b/src/app/main/side-nav/add-users-to-new-channel-dialog/add-users-to-new-channel-dialog.component.html
@@ -24,26 +24,32 @@
     <mat-form-field class="example-chip-list" *ngIf="radioValue === 2">
       <mat-chip-grid #chipGrid aria-label="Enter fruits">
         @for (fruit of fruits(); track fruit) {
-        <mat-chip-row
-          (removed)="remove(fruit)"
-          [editable]="true"
-          (edited)="edit(fruit, $event)"
-          [aria-description]="'press enter to edit ' + fruit.name"
-        >
+        <mat-chip-row (removed)="remove(fruit)">
           <img src="assets/img/profile/elias.webp" alt="" />
-          {{ fruit.name }}
-          <button matChipRemove [attr.aria-label]="'remove ' + fruit.name">
+          {{ fruit }}
+          <button matChipRemove [attr.aria-label]="'remove ' + fruit">
             <mat-icon>cancel</mat-icon>
           </button>
         </mat-chip-row>
         }
         <input
+          name="currentFruit"
           placeholder="New fruit..."
+          #fruitInput
+          [(ngModel)]="currentFruit"
           [matChipInputFor]="chipGrid"
+          [matAutocomplete]="auto"
           [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-          [matChipInputAddOnBlur]="addOnBlur"
           (matChipInputTokenEnd)="add($event)"
         />
+        <mat-autocomplete
+          #auto="matAutocomplete"
+          (optionSelected)="selected($event)"
+        >
+          @for (fruit of filteredFruits(); track fruit) {
+          <mat-option [value]="fruit">{{ fruit }}</mat-option>
+          }
+        </mat-autocomplete>
       </mat-chip-grid>
     </mat-form-field>
 
