--- a/src/app/main/side-nav/add-users-to-new-channel-dialog/add-users-to-new-channel-dialog.component.html
+++ b/src/app/main/side-nav/add-users-to-new-channel-dialog/add-users-to-new-channel-dialog.component.html
@@ -47,8 +47,11 @@
           #auto="matAutocomplete"
           (optionSelected)="selected($event)"
         >
-          @for (fruit of filteredFruits(); track fruit) {
-          <mat-option [value]="fruit">{{ fruit }}</mat-option>
+          @for (user of filteredUsersTest(); track user) {
+          <mat-option [value]="user">
+            <img src="{{ user.photoUrl }}" alt="" />
+            {{ user.userName }}
+          </mat-option>
           }
         </mat-autocomplete>
       </mat-chip-grid>
